Fixed windows/linux mismatch